Fix scrollbar on windows

--- a/public/assets/styles/core.less
+++ b/public/assets/styles/core.less
@@ -24,6 +24,7 @@
   > .center {
     box-sizing: border-box;
     height: 100%;
+    width: 100vw;
     transition: @tr;
 
     > .align {
